--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -120,6 +120,12 @@ i:before {
     min-height: 100vh;
 }
 
+.btn:not(:disabled):not(.disabled):hover {
+    color: #fff;
+    background-color: #1f6e97;
+    border-color: #1f6e97;
+}
+
 .btn {
     margin-top: 20px;
     margin-left: 40px;
