--- a/src/app/dashboard/both/both.component.html
+++ b/src/app/dashboard/both/both.component.html
@@ -13,11 +13,12 @@
         <div class="both">
             <h1><b>Both Leads/Inventory Table</b></h1>
             <br>
-            <div class="col-2">
+            <div class="">
                 <button class="btn btn-primary" (click)="setFormTitle('Both')">Add New</button>
             </div>
+            <br>
             <div class="">
-                <div class="card-body row">
+                <div class="row">
                     <div class="col-3">
                         <ng-select [items]="options" bindLabel="name" bindValue="value" class="mr-2 ml-2" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
@@ -28,7 +29,7 @@
 
                     <div class="col-1"></div>
                     <div class="col-5">
-                        <button onclick="window.print()" class="btn btn-primary">Print</button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        <button onclick="window.print()" class="btn btn-primary">Print</button> &nbsp; &nbsp; &nbsp;
                         <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
                     </div>
                 </div>
@@ -39,6 +40,7 @@
                     <thead>
                         <tr>
                             <th (click)="sort('id')" scope="col">ID <i class="fa fa-sort"></i></th>
+                            <th></th>
                             <th scope="col">Purpose</th>
                             <th scope="col">Client</th>
                             <th scope="col">Client Type</th>
@@ -58,8 +60,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let user of user | filterlist: selectedOption:refId | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p};">
+                        <tr *ngFor="let user of user | filterlist: selectedOption:refId | orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p};">
                             <!-- | tableFilter06: search_client | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id -->
+                            <td> <span *ngIf="user.priority == 'Super Hot' else hot"><img class="super-hot" src="\assets\icons\red-flag.png"></span>
+                                <ng-template #hot>
+                                    <img class="super-hot" src="\assets\icons\flag_yellow.png">
+                                </ng-template>
+                            </td>
+
+
                             <td>{{ user?.referenceId }}</td>
                             <td>{{ user?.property_purpose }}</td>
 
