--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -92,7 +92,7 @@
 
                                         <div class="profile-details">
                                             <b>Email :</b> &nbsp;&nbsp;&nbsp;&nbsp;{{tokendata?.email}} <br>
-                                            <b>Contact :</b> &nbsp;&nbsp;&nbsp;+92{{tokendata?.contact}}
+                                            <b>Contact :</b> &nbsp;&nbsp;&nbsp;{{tokendata?.contact}}
                                         </div>
 
                                     </div>
