--- a/src/app/dashboard/users/users.component.css
+++ b/src/app/dashboard/users/users.component.css
@@ -63,29 +63,24 @@
     padding: 0px;
 }
 
-
-/* .users {
-    Hide scrollbars
-} */
-
 .fa {
     margin-left: 10px;
 }
 
+.btn:not(:disabled):not(.disabled):hover {
+    color: #fff;
+    background-color: #1f6e97;
+    border-color: #1f6e97;
+}
+
 .btn {
-    /* margin-left: 20px; */
+    margin-left: 8px;
     width: 100px;
     font-size: 14px;
     background-color: #38baa2;
     color: white;
     border: 1px solid transparent;
 }
-
-
-/* .form-control-borderless {
-    border: none;
-    border: 1px solid whitesmoke;
-} */
 
 @media only screen and (max-width: 1650px) {
     .user-class {
