--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -63,36 +63,6 @@
                     </thead>
 
                     <tbody>
-                        <!-- <td>
-                <input class="form-control" type="text" [(ngModel)]="search_id" placeholder="Search ID">
-                </td>
-                <td>
-                <input class="form-control" type="text" [(ngModel)]="search_location" placeholder="Search">
-                </td>
-                <td>
-                <input class="form-control" type="text" [(ngModel)]="search_area" placeholder="Search">
-                </td>
-                <td>
-                <input class="form-control" type="text" [(ngModel)]="search_type" placeholder="Search">
-                </td>
-                <td>
-                <input class="form-control" type="text" [(ngModel)]="search_demand" placeholder="Search">
-                </td> -->
-                        <!-- <td>
-                <input class="form-control" type="text" placeholder="">
-                </td>
-                <td>
-                <input class="form-control" type="text" placeholder="">
-                </td>
-                <td>
-                <input class="form-control" type="text" placeholder="">
-                </td>
-                <td>
-                <input class="form-control" type="text" placeholder="">
-                </td>
-                <td>
-                <i class="fa fa-search icon"></i>
-                </td> -->
                         <tr *ngFor="let user of user | filterlist: selectedOption:refId | orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
                             <td> <span *ngIf="user.priority == 'Super Hot' else hot"><img class="super-hot" src="\assets\icons\red-flag.png"></span>
                                 <ng-template #hot>
@@ -124,8 +94,7 @@
                                 <td>{{ user.demand_price }}</td>
                             </ng-template>
                             <td>{{ user.beds_number }}</td>
-                            <td>{{ user.assigned_to }}</td>
-
+                            <td>{{ user?.assigned_to[0]?.fullname }}</td>
                             <td>{{ user.created | date }}</td>
                             <!-- <td>{{ user.assigned_to | titlecase}}</td> -->
                             <td>
