--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -120,7 +120,7 @@
 
                                 <td>{{ user.created | date: "dd/MM/yyyy" }}</td>
                                 <td>
-                                    <span><b>Assigned To: </b> {{ user?.assigned_to | titlecase}}</span
+                                    <span><b>Assigned To: </b> {{ user?.assigned_to[0].fullname}}</span
                 ><br />
                 </td>
                 <td>
