--- a/src/app/dashboard/users/users.component.html
+++ b/src/app/dashboard/users/users.component.html
@@ -50,7 +50,7 @@
                                 <th scope="col">Location Assigned</th>
                                 <th scope="col">Email Address</th>
                                 <th scope="col">Access</th>
-                                <th scope="col">Status</th>
+                                <th scope="col">Craeted At</th>
                                 <th scope="col">Operations</th>
 
                             </tr>
