--- a/src/app/dashboard/assigned-leads/assigned-leads.component.css
+++ b/src/app/dashboard/assigned-leads/assigned-leads.component.css
@@ -11,12 +11,14 @@
 }
 
 .table td,
-.table th {
-    padding: 10px 20px;
-}
+.table th {}
 
 .table tr:nth-child(even) {
     background-color: #38baa21f;
+}
+
+.super-hot {
+    height: 20px;
 }
 
 .table tr:hover {
