--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -94,7 +94,12 @@
                                 <td>{{ user.demand_price }}</td>
                             </ng-template>
                             <td>{{ user.beds_number }}</td>
-                            <td>{{ user?.assigned_to[0]?.fullname }}</td>
+                            <td>
+                                <span *ngIf="user?.assigned_to.fullname === ''">Self</span>
+                                <span *ngIf="user?.assigned_to.length > 0">
+                                    <span *ngFor="let assign of user?.assigned_to">{{ assign?.fullname }}<br></span>
+                                </span>
+                            </td>
                             <td>{{ user.created | date }}</td>
                             <!-- <td>{{ user.assigned_to | titlecase}}</td> -->
                             <td>
