--- a/src/app/dashboard/users/users.component.css
+++ b/src/app/dashboard/users/users.component.css
@@ -33,9 +33,7 @@
 }
 
 .table td,
-.table th {
-    padding: 10px 20px;
-}
+.table th {}
 
 .table tr:nth-child(even) {
     background-color: #38baa21f;
