--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -121,8 +121,8 @@
                                 <td>{{ user.created | date: "dd/MM/yyyy" }}</td>
 
                                 <td>
-                                    <span *ngIf="user?.assigned_to.fullname === ''">Self</span>
-                                    <span *ngIf="user?.assigned_to.length > 0">
+                                    <span *ngIf="user?.assigned_to?.fullname === ''">Self</span>
+                                    <span *ngIf="user?.assigned_to?.length > 0">
                                         <span *ngFor="let assign of user?.assigned_to">{{ assign?.fullname }}<br></span>
                                     </span>
                                 </td>
